--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
       type="text/css"
       rel="stylesheet"
-      href="css/materialize.min.css"
+      href="./node_modules/materialize-css/dist/css/materialize.min.css"
       media="screen,projection"
     />
 
@@ -20,6 +20,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script defer type="text/javascript" src="js/materialize.min.js"></script>
+    <script defer type="text/javascript" src="./node_modules/materialize-css/dist/js/materialize.min.js"></script>
   </body>
 </html>
