--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script defer type="text/javascript" src="./node_modules/materialize-css/dist/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
   </body>
 </html>
