--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Y.I.S.</title>
   </head>
-  <body>
+  <body style="display: flex; min-height: 100vh; flex-direction: column">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css"
+    />
   </body>
 </html>
